--- a/.env.example
+++ b/.env.example
@@ -10,7 +10,7 @@ DEFAULT_SETTING='{
   "openaiAPIKey": "",
   "openaiAPITemperature": 60,
   "systemRule": "",
-  "model": "gpt-3.5-turbo",
+  "model": "gpt-3.5-turbo-16k",
 }'
 RESET_CONTINUOUS_DIALOGUE_OPTION=false
 PASSWORD=
